argocd/apps/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: upgrade-scheme
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirects
  namespace: nextcloud
spec:
  redirectRegex:
    regex: "^https://([^/]+)/.well-known/(card|cal)dav"
    replacement: "https://${1}/remote.php/dav/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts-header
  namespace: nextcloud
spec:
  headers:
    customResponseHeaders:
      Strict-Transport-Security: "max-age=15552000; includeSubDomains"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-http
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cloud.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: upgrade-scheme
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-https
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.mohsun.az`)
      services:
        - name: server
          port: 80
      middlewares:
        - name: redirects
        - name: hsts-header
  tls:
    secretName: cloud-mohsun-az-tls
