argocd/apps/nextcloud/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server
  namespace: nextcloud
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "nextcloud.test.mohsun.az"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
